--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -1,18 +1,20 @@
- name: gitartwork from a contribution graph
- on: 
-   push:
-   schedule:
-     - cron: '* */24 * * *'
- jobs:
-   build:
-     name: Make gitartwork SVG
-     runs-on: ubuntu-latest
-     steps:
-       - uses: actions/checkout@v3
-       - uses: jasineri/gitartwork@v1
-         with:
-            # Use this username's contribution graph  
-            user_name: kabasilim
-            # Text on contribution graph 
-            text: KOCADOR
-       - uses: jasineri/simple-push-action@v1
+jobs:
+  build:
+    name: Make gitartwork SVG
+    permissions: write-all
+    runs-on: ubuntu-latest
+    steps:
+    - name: Collect Workflow Telemetry
+      uses: Nfsaavedra/workflow-telemetry-action@raw_data
+      with:
+        save_raw_stats: true
+    - uses: actions/checkout@v3
+    - uses: jasineri/gitartwork@v1
+      with:
+        text: KOCADOR
+        user_name: kabasilim
+    - uses: jasineri/simple-push-action@v1
+name: gitartwork from a contribution graph
+'on':
+- workflow_dispatch
+permissions: write-all
